2018-04-06

  * Update z_pack tools
  * Add ZMPI_Tproc_set_counts to send and/or receive counts explicitely (i.e. if they are already known)
  * Fix renaming of ZMPI_Get_elements
  * Minor fixes

2016-11-24

  * Update copyright year
  * Update z_pack tools
  * Fix missing renaming of ZMPI_Get_elements

2015-10-24

  * Define alternative MPI version 3.0 features (ZMPI_Count, ZMPI_Status, ...) even if MPI version 3.0 is used (to allow a seamless switch from non-3.0 to 3.0)
  * Allow MPI_STATUS_IGNORE to be used if the number of received data elements is not requested (if MPI version 3.0 is used, otherwise use ZMPI_STATUS_IGNORE)


2015-06-16

  * New release version 1.0.4 (first release on github.com/mh0fm4/zmpi_atasp)
  * Use MPI_Status and MPI_Get_elements to return the number of received data elements (if MPI version 3.0 is used, otherwise use ZMPI_Status and ZMPI_Get_elements)
  * Fix wrong name in license headers
  * Minor fixes


2014-05-28

  * New release version 1.0.3
  * Add new implementation variants based on MPI_Alltoallw, non-blocking point-to-point communication, and one-sided communication
  * Support selection of implementation variants with global variables ZMPI_Alltoall_specific_type and ZMPI_Neighbor_alltoall_specific_type
  * Change interface of tprocs and tprocs_mod distribution function (return the number of duplicates with a separate output parameter)
  * Use MPI_Count as integer type for the distribution functions (if MPI version 3.0 is used, otherwise use ZMPI_Count)
  * Add tproc_mod usage to the demo program
  * Start (internal) support for target location functions (tloc) and add algorithms for local permutation of data elements with tloc and tlocs
  * Add ZMPI_Neighbor_alltoall_specific conforming to the neighborhood collectives of MPI version 3.0
  * Change interface of ZMPI_Tproc_set_neighbors and ZMPI_Tproc_set_proclists
  * Fix memory leak in ZMPI_Tproc_free
  * Minor fixes


2013-03-22

  * New release version 1.0.2