@@ -96,7 +96,7 @@ static spint_t _spec_put_db(spint_t nphases, spec_elem_t *sb, spec_elem_t *rb, s
   /* make local send counts */
   Z_TIMING_SYNC(comm); Z_TIMING_START(t[1]);
 
-  spec_make_counts(tproc, tproc_data, sb, 0, size, scounts, procs);
+  spec_make_counts(tproc, tproc_data, sb, 0, scounts, procs, size, rank);
 
   Z_TIMING_SYNC(comm); Z_TIMING_STOP(t[1]);
 
